--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.103.0",
-    "ssh2": "^1.16.0"
+    "ssh2": "^1.16.0",
+    "ws": "^8.18.2"
   }
 }
